better text overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ article h2 {
       font-weight: bold;
       color: #FA846C !important;
       font-family: akkurat, helvetica, sans-serif !important;
-      background-color: transparent;
+      background-color: rgba(255, 255, 255, 0.5);
       width: 90%;
       font-size: 3em;
       bottom: -0.4em;
